--- a/portV2/src/index.css
+++ b/portV2/src/index.css
@@ -39,3 +39,11 @@
   display: flex;
   justify-content: center;
 }
+
+#list {
+  display: inline-block;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
