--- a/portV2/src/index.css
+++ b/portV2/src/index.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(176, 226, 255);
+  background-color: #b0e2ff;
 }
 
 #header h1 {
@@ -46,4 +46,142 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  padding: 30px 0;
+}
+
+#list h1 {
+  margin-bottom: 50px;
+  color:#001a41;
+}
+
+#login-space {
+  margin: 10%;
+  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+}
+
+#login-window {
+  padding: 40px;
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#login-window input {
+  width: 300px;
+  height: 50px;
+  margin: 5px;
+  background-color: rgb(230, 230, 230);
+  border: none;
+  padding-left: 10px;
+}
+
+#login-window button {
+  width: 312px;
+  height: 50px;
+  margin-top: 40px;
+  border: none;
+  background-color: #001a41;
+  font-size: 15px;
+  color: #fafdff;
+}
+
+#login-help {
+  width: 300px;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  display:flex;
+  justify-content: space-between;
+}
+
+#login-help a {
+  color: #001a41;
+}
+
+#new-post {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #001a41;
+  margin: 20px;
+}
+
+#input-title {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  height: 40px;
+}
+
+#input-content {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  height: 100px;
+}
+
+#new-post button {
+  font-size: 14px;
+  color: #fafdff;
+  background-color: #001a41;
+  margin: 5px 10px;
+  padding: 5px;
+  border: solid #001a41 2px;
+  transition: 273ms;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+
+}
+  
+#new-post button:hover{
+  transition: 273ms;
+  padding: 5px;
+  background-color: #fafdff;
+  color: #001a41;
+}
+
+#register-space {
+  margin: 0 10%;
+  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+}
+
+#register-window {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #001a41d5;
+  color:#fafdff;
+  border: 1px solid #001a41;
+}
+
+#register-window input {
+  width: 300px;
+  height: 40px;
+  margin: 0;
+  background-color: rgb(230, 230, 230);
+  border: none;
+  padding-left: 10px;
+}
+
+#register-window button {
+  width: 312px;
+  height: 50px;
+  margin-top: 40px;
+  border: none;
+  background-color: #5f96ba;
+  font-size: 15px;
+  color: #001a41;
 }
